; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-tvaudio.c_saa7134_tvaudio_setmute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-tvaudio.c_saa7134_tvaudio_setmute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saa7134_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @saa7134_tvaudio_setmute(%struct.saa7134_dev* %0) #0 {
  %2 = alloca %struct.saa7134_dev*, align 8
  store %struct.saa7134_dev* %0, %struct.saa7134_dev** %2, align 8
  %3 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %4 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %14 [
    i32 131, label %8
    i32 129, label %8
    i32 130, label %11
    i32 128, label %11
  ]

8:                                                ; preds = %1, %1
  %9 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %10 = call i32 @mute_input_7134(%struct.saa7134_dev* %9)
  br label %14

11:                                               ; preds = %1, %1
  %12 = load %struct.saa7134_dev*, %struct.saa7134_dev** %2, align 8
  %13 = call i32 @mute_input_7133(%struct.saa7134_dev* %12)
  br label %14

14:                                               ; preds = %1, %11, %8
  ret void
}

declare dso_local i32 @mute_input_7134(%struct.saa7134_dev*) #1

declare dso_local i32 @mute_input_7133(%struct.saa7134_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
